# epiclab-utils

./: README.md
caen-dt5742b/: README.md
caen-dt5742b/python/: rwave.py  rwaveclient_animation.py  rwaveclient_example.py
caen-dt5742b/root/lib/: rwavedump.h
caen-dt5742b/root/macros/: examples.C
caen-dt5742b/soft/: CMakeLists.txt
caen-dt5742b/soft/cmake/: FindCAEN.cmake
caen-dt5742b/soft/src/: CMakeLists.txt  rwavedata.hh  rwavedump.cc  rwavelib.cc  rwavelib.hh  rwaveserver.cc
phymotion/: README.md  activate  cmd  cmd.py  deactivate  gpos  home  init  move  status  wait
